Use parameterized SDKClusterSettings in tests (#838)
Signed-off-by: Daniel Widdis <widdis@gmail.com>